# dlprojector

./: .gitignore  .vercelignore  README.md  index.html  package-lock.json  package.json  specs.md  tailwind.config.ts  tsconfig.json  vercel.json  vite.config.ts
.github/workflows/: release.yml
docs/: backup-restore.md  keyboard-shortcuts.md  release-signing.md  user-guide.md
scripts/: sync-version.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/installer-assets/: README.md
src-tauri/migrations/: 001_initial.sql  002_bible_tables.sql  003_projection_history.sql
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: announcements.rs  backup.rs  hymns.rs  media.rs  mod.rs  personalities.rs  projection.rs  scriptures.rs  service_programs.rs  settings.rs  windows.rs
src-tauri/src/db/: connection.rs  migrations.rs  mod.rs
src-tauri/src/models/: announcement.rs  hymn.rs  media.rs  mod.rs  personality.rs  projection.rs  scripture.rs  service_program.rs  settings.rs
src-tauri/src/services/: backup_service.rs  diagnostics.rs  media_service.rs  mod.rs
src-tauri/src/windows/: mod.rs  projection_window.rs
src/hooks/: useConfirm.tsx  useKeyboardShortcuts.ts
src/lib/: dialogs.ts  error-handling.ts  events.ts  localRepository.ts  media.ts  projection-window.ts  tauri.ts  utils.ts  validators.ts
src/stores/: app.store.ts  projection.store.ts  settings.store.test.ts  settings.store.ts  ui.store.ts
website/: index.html  vite.config.ts
(+67 files in other folders)
