[package]
name = "dlprojector"
version = "0.1.0"
description = "DLCF Legon offline projection software"
authors = ["DLCF Legon"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "dlprojector_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
zip = "2"
